Hide connection options for tools that don't connect SERVER-1574